--- a/app/css/card-grid.css
+++ b/app/css/card-grid.css
@@ -1,63 +1,36 @@
-.progress-bar {
-  display: none;
-}
-
 .cards {
-  width: 100% !important;
+  width: auto !important;
   height: 100% !important;
   overflow-y: auto;
   margin: 0 auto;
   background: var(--mdc-theme-background);
 }
-.cards .mdc-card {
-  color: var(--color);
-  height: fit-content;
+
+.mdc-card {
+  background: var(--mdc-theme-background);
+  min-height: 500px;
+  border-radius: 12px;
   margin: 20px;
-  width: 300px;
+  min-width: 300px;
+  max-width: 300px;
+  overflow: hidden;
 }
-.cards .mdc-card:not(.mdc-text-field--disabled) {
-  background-color: var(--el2);
-}
-.cards .mdc-card .mdc-card__media--square img {
-  width: 100%;
-  background-image: url("../img/loading.svg");
-  background-size: 40%;
-  background-repeat: no-repeat;
+.mdc-card .mdc-card__primary-action {
+  padding: 0 16px 8px 16px;
+  min-height: 500px;
+  background-size: cover;
   background-position: center;
 }
-.cards .mdc-card .mdc-card__media--square img.unloaded {
-  height: 450px;
+.mdc-card .mdc-card__primary-action .game-card__primary {
+  margin-top: auto;
+  margin-bottom: 36px;
 }
-.cards .mdc-card .mdc-card__media--square img[src="../img/not_found.svg"] {
-  width: 50%;
-  margin: 0 25%;
-  padding: 150px 0;
-  filter: contrast(50%);
-  background: none;
+.mdc-card .mdc-card__primary-action .game-card__primary h2 {
+  color: white;
 }
-.cards .mdc-card .mdc-card__media--square::before {
-  margin: 0;
-}
-.cards .mdc-card .card-content {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-.cards .mdc-card .card-content p {
-  width: 90%;
-}
-.cards .mdc-card .mdc-card__actions {
-  height: fit-content;
-}
-.cards .mdc-card .mdc-card__actions .game-title {
-  margin-right: auto;
-}
-.cards .mdc-card .mdc-card__actions .mdc-card__action-icons:not(:disabled) {
-  color: var(--mdc-theme-secondary);
-}
-
-.cards::-webkit-scrollbar {
-  display: none !important;
+.mdc-card .mdc-card__action-buttons {
+  margin-top: -48px;
+  margin-left: 12px;
 }
 
 .game-dialog .dialog-content--loading {
@@ -66,4 +39,125 @@
 }
 .game-dialog .dialog-image {
   width: 100%;
+}
+
+.selected-game {
+  display: none;
+  position: absolute;
+  top: 64px;
+  height: calc(100% - 64px);
+  width: 100%;
+  background: var(--mdc-theme-background);
+  overflow-y: auto;
+}
+.selected-game .top-row {
+  display: flex;
+  margin: 32px;
+  width: fit-content;
+}
+.selected-game .top-row.installed .mdc-typography--headline6 {
+  margin-bottom: 44.6px !important;
+}
+.selected-game .top-row .mdc-card {
+  min-width: 360px;
+  min-height: 600px;
+  overflow: visible;
+}
+.selected-game .top-row .mdc-card .mdc-card__primary-action {
+  min-height: 600px;
+  overflow: hidden;
+  border-radius: 8px;
+}
+.selected-game .top-row .mdc-card .mdc-card__primary-action .mdc-typography--headline6 {
+  margin-bottom: 0;
+}
+.selected-game .top-row .mdc-card .mdc-card__primary-action .mdc-typography--subtitle2 {
+  margin-top: 0;
+}
+.selected-game .top-row .title-desc-container {
+  display: flex;
+  flex-direction: column;
+}
+.selected-game .top-row .title-desc-container .mdc-typography--headline4 {
+  color: white;
+}
+.selected-game .top-row .title-desc-container .mdc-typography--body2 {
+  width: 100%;
+  color: white;
+  max-height: 495px;
+  overflow-y: auto;
+}
+.selected-game .top-row .title-desc-container .mdc-typography--body2 * {
+  width: 95%;
+}
+.selected-game .bottom-row {
+  display: flex;
+  flex-direction: column;
+  margin: 32px;
+}
+.selected-game .bottom-row .game-screenshots {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  overflow-x: auto;
+  border-radius: 10px;
+}
+.selected-game .bottom-row .game-screenshots img {
+  object-fit: cover;
+  width: 500px;
+  border-radius: 10px;
+  margin-bottom: 12px;
+}
+.selected-game .bottom-row .game-screenshots img:not(:last-of-type) {
+  margin-right: 12px;
+}
+.selected-game .bottom-row .details {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  color: white;
+  margin-top: 16px;
+}
+.selected-game .bottom-row .details div {
+  display: flex;
+  flex-direction: column;
+}
+.selected-game .bottom-row .details div p {
+  margin: 2px 0;
+}
+.selected-game .back-button-container {
+  width: 64px;
+  height: 64px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--mdc-theme-primary);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 7;
+  -webkit-app-region: no-drag;
+}
+.selected-game .back-button-container button {
+  color: white;
+}
+.selected-game .back-button-container button::before, .selected-game .back-button-container button::after {
+  background-color: white;
+}
+.selected-game .back-button-container button:hover::before {
+  opacity: 0.08;
+}
+.selected-game .back-button-container button.mdc-ripple-upgraded--background-focused::before, .selected-game .back-button-container button:not(.mdc-ripple-upgraded):focus::before {
+  transition-duration: 75ms;
+  opacity: 0.24;
+}
+.selected-game .back-button-container button:not(.mdc-ripple-upgraded)::after {
+  transition: opacity 150ms linear;
+}
+.selected-game .back-button-container button:not(.mdc-ripple-upgraded):active::after {
+  transition-duration: 75ms;
+  opacity: 0.24;
+}
+.selected-game .back-button-container button.mdc-ripple-upgraded {
+  --mdc-ripple-fg-opacity: 0.24;
 }
