--- a/app/css/root.css
+++ b/app/css/root.css
@@ -13262,8 +13262,8 @@ a.mdc-list-item {
 
 /*# sourceMappingURL=material-components-web.css.map*/
 :root {
-  --mdc-theme-primary: #58c8eb;
-  --mdc-theme-secondary: #f192cd;
+  --mdc-theme-primary: #40c4ff;
+  --mdc-theme-secondary: #f57ba4;
   --mdc-theme-background: #ffffff;
   --drawer-selected: rgba(255, 168, 253, 0.12);
   --el1: #bdbdbd;
@@ -13276,8 +13276,8 @@ a.mdc-list-item {
 }
 
 [data-theme=dark] {
-  --mdc-theme-primary: #58c8eb;
-  --mdc-theme-secondary: #f192cd;
+  --mdc-theme-primary: #40c4ff;
+  --mdc-theme-secondary: rgb(245, 123, 164);
   --mdc-theme-background: #121212;
   --el1: #bdbdbd;
   --el2: #1d1d1d;
@@ -13298,22 +13298,24 @@ body {
   user-select: none;
   font-family: sans-serif;
   background-color: var(--mdc-theme-background);
-  /* Buttons */
 }
-body *::-webkit-scrollbar {
+body * ::-webkit-scrollbar {
   width: 10px;
   border: 5px solid white;
   height: 10px;
 }
-body *::-webkit-scrollbar-thumb {
-  border-radius: 5px;
-  background-color: #c1c1c1;
+body * ::-webkit-scrollbar-thumb {
+  background-color: var(--mdc-theme-secondary);
 }
-body *::-webkit-scrollbar-track {
-  background-color: transparent;
+body * ::-webkit-scrollbar-track {
+  background-color: var(--mdc-theme-primary);
 }
-body *::-webkit-scrollbar-button:single-button {
+body * ::-webkit-scrollbar-button:single-button {
   display: none;
+}
+body * ::selection {
+  background-color: var(--mdc-theme-secondary);
+  color: white;
 }
 body .mdc-top-app-bar {
   z-index: 7;
@@ -13354,6 +13356,9 @@ body .mdc-top-app-bar .window-buttons .ui-titlecontrols .ui-btn * {
 }
 body .mdc-top-app-bar .window-buttons .ui-titlecontrols .ui-btn:hover {
   background: rgba(255, 255, 255, 0.1);
+}
+body .mdc-top-app-bar .top-app-bar-progress {
+  display: none;
 }
 body .mdc-drawer {
   --mdc-theme-primary: var(--mdc-theme-secondary);
@@ -13397,7 +13402,9 @@ body .mdc-drawer-app-content .main-content .intro {
 body .mdc-drawer-app-content .main-content .intro .mdc-typography--headline4 {
   margin-block-start: 0 !important;
 }
-body .mdc-drawer-app-content .main-content .mdc-menu, body .mdc-drawer-app-content .main-content .mdc-list, body .mdc-drawer-app-content .main-content .mdc-list > * {
+body .mdc-drawer-app-content .main-content .mdc-menu,
+body .mdc-drawer-app-content .main-content .mdc-list,
+body .mdc-drawer-app-content .main-content .mdc-list > * {
   z-index: 50;
 }
 body .mdc-text-field--label-floating:not(.mdc-text-field--disabled) .mdc-floating-label {
