--- a/app/css/store.css
+++ b/app/css/store.css
@@ -1,112 +1,70 @@
-.mdc-fab {
-  z-index: 9;
+.searchbar {
+  -webkit-app-region: no-drag;
   position: fixed;
-  margin-top: 16px;
-  margin-left: 16px;
-  height: 56px;
-  transition: width 0.5s;
+  width: 50vw;
+  top: 8px;
+  border-radius: 8px;
+  z-index: 9;
+  background: #ffffff66;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  height: 48px;
+  display: flex;
+  color: #406575;
 }
-.mdc-fab:not(.mdc-text-field--disabled) .mdc-text-field__input {
-  color: var(--light-color);
+.searchbar .material-icons {
+  width: 48px;
+  height: 48px;
 }
-.mdc-fab .mdc-text-field__input {
-  caret-color: var(--light-color);
+.searchbar input {
+  color: #406575;
+  width: 100%;
+  background: transparent;
+  border: none;
+  font-size: 1em;
+  line-height: 1rem;
+  font-family: var(--mdc-typography-font-family, Roboto, sans-serif);
 }
-.mdc-fab:not(.mdc-text-field--disabled) .mdc-line-ripple::after {
-  border-bottom-color: white;
-}
-.mdc-fab label {
-  display: none;
-  text-transform: none;
+.searchbar input:focus {
+  outline: none;
 }
 
-.mdc-fab--extended .mdc-text-field {
-  display: flex;
-}
-.mdc-fab--extended .mdc-text-field:not(.mdc-text-field--disabled) {
-  background-color: transparent;
-}
-.mdc-fab--extended .mdc-fab__label {
-  display: none;
-}
-
-@keyframes scale-in {
-  0% {
-    opacity: 0;
-    transform: scale(0);
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-.mdc-dialog {
-  z-index: 10;
-}
-.mdc-dialog .mdc-dialog__surface {
-  min-width: 950px;
-  max-height: 625px !important;
-}
-.mdc-dialog .mdc-dialog__surface .mdc-dialog__content {
-  display: flex;
-  flex-direction: column;
+.store {
+  width: 100%;
+  height: 100%;
   overflow-y: auto;
 }
-.mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-top {
-  display: flex;
+.store .cards {
+  max-height: 0px;
+}
+.store .genres .genre-container {
+  min-height: 450px;
+}
+.store .genres .genre-container h3 {
+  margin-left: 5vw;
+  color: white;
+}
+.store .genres .genre-container .genre-cards {
+  height: 100%;
   width: 100%;
-  height: 515px !important;
-  align-items: center;
-}
-.mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-top .dialog-game-description {
-  height: 515px;
-  max-width: 500px;
-  overflow-y: scroll;
-  margin-left: 16px;
-  display: flex;
-  flex-direction: column;
-}
-.mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-top .dialog-game-description::-webkit-scrollbar {
-  display: none;
-}
-.mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-top img {
-  width: 342px;
-  height: 482px;
-  border-radius: 10px;
-  box-shadow: 0 2px 4px rgba(66, 66, 66, 0.5);
-}
-.mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-bottom {
-  display: flex;
-  width: 100%;
-  height: 515px !important;
-}
-.mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-bottom .details {
-  margin-top: 8px;
-  width: 342px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  margin-left: 18px;
-}
-.mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-bottom .details div {
-  display: flex;
-  flex-direction: column;
-}
-.mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-bottom .details div p {
-  margin: 2px 0;
-}
-.mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-bottom .game-screenshots {
-  width: 500px;
-  height: 400px;
   display: flex;
   overflow-x: auto;
-  margin-top: 8px;
-  border-radius: 10px;
 }
-.mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-bottom .game-screenshots img {
-  object-fit: cover;
-  width: 500px;
-  border-radius: 10px;
+.store .genres .genre-container .genre-cards .mdc-card:first-of-type {
+  margin-left: 5vw;
 }
-.mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-bottom .game-screenshots img:not(:last-of-type) {
-  margin-right: 12px;
+.store .genres .genre-container .genre-cards:hover::-webkit-scrollbar {
+  display: initial;
+}
+.store .genres .genre-container .genre-cards::-webkit-scrollbar {
+  display: none;
+  height: 12px;
+}
+.store .genres .genre-container .genre-cards::-webkit-scrollbar-track {
+  background-color: var(--mdc-theme-background);
+}
+.store .genres .genre-container .genre-cards::-webkit-scrollbar-thumb {
+  border-left: 5vw solid var(--mdc-theme-background);
+  border-radius: 0;
 }
