--- a/app/scss/home.scss
+++ b/app/scss/home.scss
@@ -2,14 +2,23 @@
     background: grey;
     display: grid;
     grid-gap: 20px;
+    margin: 20px;
     grid-auto-rows: 200px;
     grid-template-columns: repeat(auto-fill, 300px);
+    background: var(--mdc-theme-background);
+
+    .mdc-card {
+        background: var(--el2);
+        height: fit-content;
+    }
 
     .mdc-card__primary-action {
-        padding: 0 16px 8px 16px;
+        padding: 0 0 8px 16px;
+        color: white;
     }
 
     .demo-card__title {
+        margin-top: 12px;
         margin-bottom: 0px;
     }
 
