--- a/app/scss/root.scss
+++ b/app/scss/root.scss
@@ -6,8 +6,8 @@
 @import '@material/textfield';
 
 :root {
-    --mdc-theme-primary: #58c8eb;
-    --mdc-theme-secondary: #f192cd;
+    --mdc-theme-primary: #40c4ff;
+    --mdc-theme-secondary: #f57ba4;
     --mdc-theme-background: #ffffff;
     --drawer-selected: rgba(255, 168, 253, 0.12);
     --el1: #bdbdbd;
@@ -20,8 +20,8 @@
 }
 
 [data-theme='dark'] {
-    --mdc-theme-primary: #58c8eb;
-    --mdc-theme-secondary: #f192cd;
+    --mdc-theme-primary: #40c4ff;
+    --mdc-theme-secondary: rgb(245, 123, 164);
     --mdc-theme-background: #121212;
     --el1: #bdbdbd;
     --el2: #1d1d1d;
@@ -43,23 +43,26 @@ body {
     font-family: sans-serif;
     background-color: var(--mdc-theme-background);
 
-    *::-webkit-scrollbar {
-        width: 10px;
-        border: 5px solid white;
-        height: 10px;
-    }
+    * {
+        ::-webkit-scrollbar {
+            width: 10px;
+            border: 5px solid white;
+            height: 10px;
+        }
+        ::-webkit-scrollbar-thumb {
+            background-color: var(--mdc-theme-secondary);
+        }
+        ::-webkit-scrollbar-track {
+            background-color: var(--mdc-theme-primary);
+        }
+        ::-webkit-scrollbar-button:single-button {
+            display: none;
+        }
 
-    *::-webkit-scrollbar-thumb {
-        border-radius: 5px;
-        background-color: #c1c1c1;
-    }
-
-    *::-webkit-scrollbar-track {
-        background-color: transparent;
-    }
-    /* Buttons */
-    *::-webkit-scrollbar-button:single-button {
-        display: none;
+        ::selection {
+            background-color: var(--mdc-theme-secondary);
+            color: white;
+        }
     }
 
     .mdc-top-app-bar {
@@ -107,6 +110,10 @@ body {
                     background: rgba(255, 255, 255, 0.1);
                 }
             }
+        }
+
+        .top-app-bar-progress {
+            display: none;
         }
     }
 
@@ -156,7 +163,9 @@ body {
                 }
             }
 
-            .mdc-menu, .mdc-list, .mdc-list > *  {
+            .mdc-menu,
+            .mdc-list,
+            .mdc-list > * {
                 z-index: 50;
             }
         }
