small bug fixes

--- a/app/scss/overlays.scss
+++ b/app/scss/overlays.scss
@@ -3,6 +3,7 @@
     .snackbar-container {
         position: absolute;
         bottom: 0;
+        left: 0;
         height: fit-content;
         width: fit-content;
         display: flex;
