--- a/app/css/overlays.css
+++ b/app/css/overlays.css
@@ -1,6 +1,7 @@
 .overlays .snackbar-container {
   position: absolute;
   bottom: 0;
+  left: 0;
   height: fit-content;
   width: fit-content;
   display: flex;
