--- a/app/scss/home.scss
+++ b/app/scss/home.scss
@@ -2,12 +2,14 @@
     background: grey;
     display: grid;
     grid-gap: 20px;
-    margin: 20px;
+    margin: 0 20px 20px 20px;
     grid-auto-rows: 200px;
+    height: fit-content;
     grid-template-columns: repeat(auto-fill, 300px);
     background: var(--mdc-theme-background);
 
     .mdc-card {
+        margin-top: 20px;
         background: var(--el2);
         height: fit-content;
     }
