--- a/app/scss/home.scss
+++ b/app/scss/home.scss
@@ -16,7 +16,7 @@
 
     .mdc-card__primary-action {
         padding: 0 0 8px 16px;
-        color: white;
+        color: var(--color);
     }
 
     .demo-card__title {
