--- a/app/scss/card-grid.scss
+++ b/app/scss/card-grid.scss
@@ -72,7 +72,7 @@
             }
             .mdc-typography--subtitle2 {
                 margin-top: 0;
-                margin-bottom: 0;
+                margin-bottom: 4px;
             }
         }
     }
