--- a/app/css/installed.css
+++ b/app/css/installed.css
@@ -14,7 +14,30 @@
 .mdc-dialog .mdc-dialog__content .buttonrow .row-icon i {
   margin: 0px;
 }
+.mdc-dialog.add-game-dialog .mdc-dialog__content {
+  padding-bottom: 0px;
+}
+.mdc-dialog.add-game-dialog .mdc-dialog__surface {
+  width: 400px;
+}
+.mdc-dialog.add-game-dialog .mdc-button {
+  margin-top: 12px;
+}
+.mdc-dialog.add-game-dialog .game-directory-text {
+  width: 100%;
+}
+.mdc-dialog.add-game-dialog .game-directory-text p {
+  overflow-x: auto;
+  white-space: nowrap;
+  margin-bottom: 0;
+}
 
 .mdc-card .mdc-card__primary-action .game-card__primary {
   margin-bottom: 0px;
+}
+
+.mdc-fab {
+  position: fixed;
+  bottom: 16px;
+  right: 16px;
 }
