--- a/app/scss/installed.scss
+++ b/app/scss/installed.scss
@@ -17,6 +17,29 @@
             }
         }
     }
+
+    &.add-game-dialog {
+
+        .mdc-dialog__content {
+            padding-bottom: 0px;
+        }
+
+        .mdc-dialog__surface {
+            width: 400px;
+        }
+
+        .mdc-button {
+            margin-top: 12px;
+        }
+        .game-directory-text {
+            width: 100%;
+            p {
+                overflow-x: auto;
+                white-space: nowrap;
+                margin-bottom: 0;
+            }
+        }
+    }
 }
 
 .mdc-card {
@@ -25,4 +48,10 @@
             margin-bottom: 0px;
         }
     }
+}
+
+.mdc-fab {
+    position: fixed;
+    bottom: 16px;
+    right: 16px;
 }
