--- a/app/scss/root.scss
+++ b/app/scss/root.scss
@@ -9,7 +9,7 @@
     --mdc-theme-primary: #40c4ff;
     --mdc-theme-secondary: #f57ba4;
     --mdc-theme-background: #ffffff;
-    --drawer-selected: rgba(255, 168, 253, 0.12);
+    --divider-color: rgba(0, 0, 0, 0.12);
     --el1: #bdbdbd;
     --el2: #eeeeee;
     --drawer-bg: #eeeeee;
@@ -21,8 +21,9 @@
 
 [data-theme='dark'] {
     --mdc-theme-primary: #40c4ff;
-    --mdc-theme-secondary: rgb(245, 123, 164);
+    --mdc-theme-secondary: #f57ba4;
     --mdc-theme-background: #121212;
+    --divider-color: rgba(0, 0, 0, 0.12)
     --el1: #bdbdbd;
     --el2: #1d1d1d;
     --drawer-bg: #212121;
@@ -195,3 +196,7 @@ body {
 .mdc-linear-progress {
     --mdc-theme-primary: var(--mdc-theme-secondary);
 }
+
+        .mdc-list-divider {
+            border-color: var(--divider-color);
+        }
