--- a/app/css/loading.css
+++ b/app/css/loading.css
@@ -1,11 +1,12 @@
 body {
-  background: #40c4ff;
+  background: #40c4ff80;
   width: 100vw;
   height: 100vh;
   max-width: 100vw;
   padding: 0;
   margin: 0;
   overflow: hidden;
+  border-radius: 250px;
 }
 body .overlay {
   position: absolute;
@@ -16,9 +17,9 @@ body .overlay {
   justify-content: center;
   z-index: 1;
 }
-body .overlay P {
+body .overlay p {
   color: white;
-  font-size: 7.5vw;
+  font-size: 8.5vw;
   font-family: sans-serif;
   font-weight: bold;
 }
@@ -62,7 +63,7 @@ body .ripple .circle {
   border-radius: 50%;
   background: #f57ba4;
   animation: ripple 3s infinite;
-  box-shadow: 0px 0px 1px 0px #508fb9;
+  box-shadow: 0px 0px 1px 0px #40c4ff;
 }
 @keyframes ripple {
   0% {
@@ -74,4 +75,9 @@ body .ripple .circle {
   100% {
     transform: scale(0.8);
   }
+}
+
+* {
+  user-select: none;
+  cursor: default;
 }
