--- a/app/css/loading.css
+++ b/app/css/loading.css
@@ -1,12 +1,17 @@
 body {
-  background: #40c4ff80;
   width: 100vw;
   height: 100vh;
-  max-width: 100vw;
   padding: 0;
   margin: 0;
+}
+body .loading {
+  width: 100vw;
+  height: 100vh;
+  background: #40c4ff;
+  border-radius: 25px;
+  z-index: 0;
   overflow: hidden;
-  border-radius: 250px;
+  transform: translateZ(0);
 }
 body .overlay {
   position: absolute;
@@ -15,13 +20,17 @@ body .overlay {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1;
+  z-index: 2;
 }
 body .overlay p {
   color: white;
   font-size: 8.5vw;
   font-family: sans-serif;
   font-weight: bold;
+}
+body .ripple {
+  z-index: 1;
+  border: 1px solid transparent;
 }
 body .ripple .circle:nth-child(5) {
   width: 1000px;
