--- a/site/scss/root.scss
+++ b/site/scss/root.scss
@@ -8,45 +8,256 @@ body {
     padding: 0;
     height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
-    background: var(--main);
+    background-color: var(--main);
+    font-family: sans-serif;
+
+    * {
+        &:focus {
+            outline: none;
+        }
+    }
 
     main {
         height: 100%;
-        .title {
-            height: 80%;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
+
+        nav {
+            .title {
+                color: white;
+            }
+
+            .links {
+                a {
+                    font-weight: bold;
+                    color: white;
+                    text-decoration: none;
+                }
+            }
+        }
+
+        .quote {
             user-select: none;
 
             button {
-                border: none;
                 border-radius: 15px;
-                font-size: 4em;
-                padding: 0.4em 0.9em;
-                background-color: var(--accent);
                 color: white;
                 border: solid 0.1em var(--main);
+                background-color: var(--accent);
 
                 &:focus {
-                    border: solid 0.1em #00000040;
+                    border: solid 0.1em white;
                 }
             }
 
             h1 {
-                color: white;
-                font-size: 8.5em;
-                font-family: sans-serif;
                 font-weight: bold;
+                color: white;
             }
         }
     }
 }
 
-* {
-    &:focus {
-        outline: none;
+@media only screen and (min-width: 900px) {
+    body {
+        main {
+            nav {
+                height: 52px;
+                display: flex;
+                align-items: center;
+
+                .title {
+                    width: fit-content;
+                    font-size: 1em;
+                    margin-left: 1em;
+                }
+
+                .links {
+                    margin-left: auto;
+                    margin-right: 1em;
+                    display: flex;
+
+                    a {
+                        font-size: 1.25em;
+                        padding: 0 15px;
+                    }
+                }
+            }
+
+            .quote {
+                height: 80%;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+
+                button {
+                    font-size: 4em;
+                    padding: 0.4em 0.9em;
+                }
+
+                h1 {
+                    font-size: 8.5em;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    body {
+        main {
+            nav {
+                height: 52px;
+                display: flex;
+                align-items: center;
+
+                .title {
+                    width: fit-content;
+                    font-size: 1em;
+                    margin-left: 1em;
+                }
+
+                .links {
+                    margin-left: auto;
+                    margin-right: 1em;
+                    display: flex;
+
+                    a {
+                        font-size: 1.25em;
+                        padding: 0 15px;
+                    }
+                }
+            }
+
+            .quote {
+                height: 80%;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+
+                button {
+                    font-size: 3em;
+                    padding: 0.4em 0.9em;
+                }
+
+                h1 {
+                    font-size: 5em;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 530px) {
+    body {
+        main {
+            display: flex;
+            flex-direction: column;
+
+            nav {
+                height: 208px;
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+
+                .title {
+                    width: fit-content;
+                    font-size: 1.5em;
+                }
+
+                .links {
+                    width: 100%;
+                    height: 50%;
+                    align-items: center;
+                    justify-content: space-around;
+                    display: flex;
+                    margin-top: 1em;
+
+                    a {
+                        font-size: 1.5em;
+                        padding: 0 15px;
+                    }
+                }
+            }
+
+            .quote {
+                margin-top: 25%;
+                padding-bottom: 10%;
+                height: fit-content;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+
+                button {
+                    font-size: 2em;
+                    padding: 0.4em 0.9em;
+                }
+
+                h1 {
+                    font-size: 3em;
+                    width: fit-content;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    body {
+        main {
+            display: flex;
+            flex-direction: column;
+
+            nav {
+                height: 208px;
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+
+                .title {
+                    width: fit-content;
+                    font-size: 8vw;
+                }
+
+                .links {
+                    width: 100%;
+                    height: 50%;
+                    align-items: center;
+                    justify-content: space-around;
+                    display: flex;
+                    margin-top: 1em;
+
+                    a {
+                        font-size: 8vw;
+                        padding: 0 15px;
+                    }
+                }
+            }
+
+            .quote {
+                margin-top: 25%;
+                padding-bottom: 10%;
+                height: fit-content;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+
+                button {
+                    font-size: 7.5vw;
+                    padding: 0.4em 0.9em;
+                }
+
+                h1 {
+                    font-size: 10vw;
+                    width: fit-content;
+                }
+            }
+        }
     }
 }
