--- a/site/scss/root.scss
+++ b/site/scss/root.scss
@@ -23,6 +23,14 @@ body {
         nav {
             .title {
                 color: white;
+                display: flex;
+                align-items: center;
+
+                img {
+                    width: 36px;
+                    height: 36px;
+                    margin-right: 1em;
+                }
             }
 
             .links {
@@ -30,6 +38,14 @@ body {
                     font-weight: bold;
                     color: white;
                     text-decoration: none;
+                    user-select: none;
+                    margin-bottom: 8px;
+
+                    &:visited,
+                    &:active {
+                        margin-bottom: -2px;
+                        border-bottom: solid 4px white;
+                    }
                 }
             }
         }
@@ -114,6 +130,52 @@ body {
                 .title {
                     width: fit-content;
                     font-size: 1em;
+                }
+
+                .links {
+                    margin-left: auto;
+                    margin-right: 1em;
+                    display: flex;
+
+                    a {
+                        font-size: 1.25em;
+                        padding: 0 15px;
+                    }
+                }
+            }
+
+            .quote {
+                height: 80%;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+
+                button {
+                    font-size: 3em;
+                    padding: 0.4em 0.9em;
+                }
+
+                h1 {
+                    font-size: 5em;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 530px) {
+    body {
+        main {
+            nav {
+                height: 52px;
+                display: flex;
+                align-items: center;
+
+                .title {
+                    width: fit-content;
+                    font-size: 1em;
                     margin-left: 1em;
                 }
 
@@ -165,15 +227,19 @@ body {
                 .title {
                     width: fit-content;
                     font-size: 1.5em;
+
+                    h2 {
+                        padding: 0;
+                        margin: 0.5em;
+                    }
                 }
 
                 .links {
                     width: 100%;
-                    height: 50%;
+                    height: fit-content;
                     align-items: center;
                     justify-content: space-around;
                     display: flex;
-                    margin-top: 1em;
 
                     a {
                         font-size: 1.5em;
@@ -221,11 +287,21 @@ body {
                 .title {
                     width: fit-content;
                     font-size: 8vw;
+                    flex-direction: column;
+
+                    img {
+                        margin-top: 1em;
+                    }
+
+                    h2 {
+                        padding: 0;
+                        margin: 0.5em;
+                    }
                 }
 
                 .links {
                     width: 100%;
-                    height: 50%;
+                    height: fit-content;
                     align-items: center;
                     justify-content: space-around;
                     display: flex;
