--- a/site/scss/downloads.scss
+++ b/site/scss/downloads.scss
@@ -7,6 +7,11 @@ main {
             font-weight: bold;
             color: white;
         }
+
+        p {
+            color: red;
+            font-weight: bolder;
+        }
     }
 }
 
