small changes to downloader and alpha updated

--- a/app/css/library.css
+++ b/app/css/library.css
@@ -28,6 +28,9 @@
   content: "";
   border-right: 20px solid transparent;
 }
+.library .genres .genre-container .genre-cards:hover {
+  margin-bottom: -12px;
+}
 .library .genres .genre-container .genre-cards:hover::-webkit-scrollbar {
   display: initial;
 }
