--- a/app/scss/library.scss
+++ b/app/scss/library.scss
@@ -39,6 +39,7 @@
                 }
 
                 &:hover {
+                    margin-bottom: -12px;
                     &::-webkit-scrollbar {
                         display: initial;
                     }
